syntax = "proto3";

// Set the Go package name
option go_package = "deephaven.io/test-julia-grpc/greetingservice";

package GreetingService;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
